Implemented user search API.
